# go_tower_go

./: .gitignore  Cargo.toml  run_wasm.sh
.cargo/: config.toml
.github/workflows/: release.yaml
assets/models/: cannon.glb  cannon.gltf  skybox.glb  tower.glb  tower_car.glb  track.glb
assets/shaders/: background.wgsl  custom_material.wgsl  scroll_texture.wgsl
files/models/: cannon.blend  cannon.blend1  car.blend  skybox.blend  tower.blend  tower.blend1  tower_car.blend  tower_car.blend1  track.blend  track.blend1
src/: main.rs
src/assets/: loader.rs  loader_ext.rs  mod.rs
src/debug/: mod.rs
src/ingame/: bullet.rs  camera.rs  car.rs  collisions.rs  config.rs  controller.rs  finish_line.rs  game_settings.rs  kart.rs  mod.rs  particle.rs  player.rs  points.rs
src/ingame/bot/: mod.rs
src/ingame/common/: health.rs  mod.rs  scaler.rs
src/ingame/path/: mod.rs
src/ingame/race/: mod.rs  placement_sensor.rs
src/ingame/tower/: mod.rs
src/ingame/ui/: end_game.rs  mod.rs  pre_game.rs
src/menu/: mod.rs  splash.rs
src/menu/controls/: loader.rs  mod.rs  setup.rs  update.rs
src/menu/instructions/: loader.rs  mod.rs  setup.rs  update.rs
src/menu/settings/: loader.rs  mod.rs  setup.rs  state.rs  update.rs
src/menu/title_screen/: loader.rs  mod.rs  state.rs  update.rs
src/shaders/: mod.rs
src/ui/: follow_text.rs  mod.rs  text_size.rs
src/util/: audio.rs  audio_emitter.rs  mod.rs  scene_hook.rs  screen_shake.rs
wasm/: index.html
