[package]
name = "go_tower_go"
version = "0.1.0"
edition = "2021"

[features]
debug = []
camera = []
inspect = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.0" }
bevy-inspector-egui = { version = "0.21" }
bevy_xpbd_3d = "0.3.2"
bevy_turborand = "0.7.0"
